- Added missing photo - Attempted to fix img styling on mobile screens

--- a/src/scss/layout/_services.scss
+++ b/src/scss/layout/_services.scss
@@ -69,6 +69,7 @@
     img {
       display: block;
       height: auto;
+      max-height: 350px;
       max-width: 100%;
     }
 }
